Bug fixes and header search on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -47,7 +47,7 @@ table {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", serif;
+  font-family: sans-serif;
 }
 
 button, a {
